# dohodometr-investment-service

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.backup  .env.production.example  .env.production.secure  .eslintrc.security.js  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  .yamllint.yml  AUDIT_COMPLETION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITOR_ANALYSIS.md  COMPLIANCE_RF.md  CONSENT_FORM_RF.html  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETED.md  DEPLOY_COMMANDS.md  DEPLOY_FULL_APP.md  DESIGN_IMPLEMENTATION_COMPLETE.md  DESIGN_REVIEW_REPORT.md  DESIGN_SYSTEM.md  DOHODOMETR_DEPLOY.md  Dockerfile  FINAL_COMPLETION_SUMMARY.md  FINAL_HARD_REVIEW_2025.md  FINAL_REPORT.md  FINANCIAL_DISCLAIMER_RF.md  GITHUB_SECURITY_SETUP.md  GITHUB_SECURITY_SETUP_FINAL.md  HARD_REVIEW_REPORT.md  IMPLEMENTATION_ROADMAP.md  LICENSE  LICENSE_RF  (+55 more)
.ci/: lint.sh
.cursor/: QUICK_RULES.md  rules
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/codeql/: codeql-config.yml
.github/workflows/: admin-ci.yml  admin-deploy.yml  auto-labeler.yml  cd-production-fixed.yml  cd-production.yml  ci.yml  codeql.yml  comprehensive-security.yml  contract-tests.yml  docker-ci.yml  release-please.yml  security-baseline.yml  security-hardened.yml  security-scanning.yml  security.yml
RUNBOOKS/: DB_DOWN.md  LATENCY_REGRESSION.md  QUEUE_LAG.md  README.md
admin/backend/: env.example  requirements.txt
admin/backend/app/: main.py
admin/backend/tests/: test_admin_api.py
admin/ci/: run_tests.sh
admin/frontend/: .eslintrc.json  Dockerfile  jest.config.js  package.json  tailwind.config.ts  tsconfig.json
admin/frontend/app/: layout.tsx
admin/frontend/lib/: api.ts
agents/: _invoke.md  ai-devops-engineer.md  ai-fullstack-developer.md  ai-legal-counsel.md  ai-marketing-specialist.md  ai-product-manager.md  ai-project-lead.md  ai-qa-engineer.md  ai-ui-ux-designer.md
agents/cards/: devops-engineer.md  fullstack-developer.md  legal-counsel.md  marketing-specialist.md  product-manager.md  project-lead.md  qa-engineer.md  ui-ux-designer.md
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  alembic.ini  check_startup.py  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/admin_api/: github_sync.py  models.py  routes.py  scheduler.py  schemas.py
backend/app/api/: health.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  portfolios.py  tax_calculator.py  transactions.py
backend/app/core/: config.py  database.py  database_sync.py  db.py  logging.py  redis_client.py  security.py
backend/app/models/: __init__.py  account.py  alert.py  audit.py  benchmark.py  broker_connection.py  cashflow.py  crypto_asset.py  custom_asset.py  goal.py  holding.py  instrument.py  notification.py  portfolio.py  price.py  tag.py  transaction.py  user.py
backend/app/repositories/: account.py  portfolio.py  transaction.py  user.py
backend/app/schemas/: auth.py  portfolio.py
backend/app/services/: import_service.py  portfolio_analytics.py  rebalancing_service.py  tax_calculator_rf.py  tinkoff_api.py
backend/tests/: test_api_endpoints.py  test_health.py
backend/tests/integration/: test_database.py
backend/tests/unit/: test_auth.py  test_config.py  test_security.py
deploy/nginx/: admin.conf
deployment/: QUICK_COMMANDS.txt  README_DEPLOY.md  deploy.sh  deploy_production_secrets.sh  docker-compose.production.yml  environment.production  generate_secure_env.sh  generate_secure_secrets.sh  git_deploy.sh  restart_services.sh  save_server_changes.sh  sync_server.sh  test_auth.sh  update_to_full_app.sh
deployment/html/: 404.html  index.html
deployment/nginx/: nginx.conf
design_references/: auth_pages.html  dashboard_pages.html  main_page.html  system_pages.html  tax_mobile.html
docs/: DEPLOY_TROUBLESHOOT.md  quality.md  review_and_roadmap.md
docs/ops/: agent-scenarios.md  agents-invoke.md
docs/rules/: 01-governance.md  02-quality.md  03-security.md  04-data-policy.md  05-api-standards.md  06-frontend-standards.md  07-backend-standards.md  08-observability.md  09-release-versioning.md  10-dor-dod.md  11-agents-llm.md
docs/testing/: env-fixtures.md
frontend/: .dockerignore  .eslintignore  .eslintrc.js  .npmrc  .prettierignore  Dockerfile  Dockerfile.dev  global.d.ts  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  prettier.config.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: BuildStamp.tsx  README-BuildStamp.md  mobile-navigation.tsx
frontend/hooks/: use-toast.ts
frontend/lib/: api-client.ts  api.ts  utils.ts
frontend/public/: robots.txt
frontend/scripts/: write-build-meta.js
frontend/styles/: design-system.css
frontend/tests/: critical-paths.test.tsx  global-setup.ts  global-teardown.ts  setup.ts  setup.tsx
infra/postgres/: init.sql  postgresql.conf
infra/prometheus/: alerts.yml  prometheus.yml
infra/redis/: redis.conf
infra/traefik/: dynamic.yml
k6/: baseline.js  smoke.js
ops/nginx/: cache.conf
scripts/: fe_fail_report.sh  flaky_detector.py  inventory.sh  pytest_fail_report.sh  quality_gate_summary.py  security_scan.sh
security/: internal_security_audit.sh  penetration_testing.sh  secrets_management_setup.sh  setup_security_monitoring.sh  team_training_materials.md
server_backup/backend/: .dockerignore  Dockerfile  mypy.ini  requirements-dev.txt
server_backup/frontend/: next.config.js  tailwind.config.js
(+99 files in other folders)
